Custom--app/main/default/objects/HOA_Tracking__c/HOA_Tracking__c.object-meta.xml
<CustomObject>
    <description>This is part of the HOA application.  This is a joiner object that connects the HOA company record to the related Portfolio record and houses property specific details such as HOA Account Number and workflow to ensure all steps are taken upon acquisition.  (Confirming receipt of CCRs, etc.)</description>
    <label>HOA Tracking</label>
    <nameField>
        <displayFormat>HOA Tracking-{0000}</displayFormat>
        <label>HOA Tracking #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HOA Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>