Custom--app/main/default/objects/HOA_Tracking__c/fields/ACH_Electronic_Payment__c.field-meta.xml
<CustomField>
    <fullName>ACH_Electronic_Payment__c</fullName>
    <label>ACH/Electronic Payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>