Custom--app/main/default/objects/HOA_Tracking__c/fields/Acquistion_Status__c.field-meta.xml
<CustomField>
    <fullName>Acquistion_Status__c</fullName>
    <formula>TEXT(Property__r.Acquisition_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acquisition Status</label>
    <type>Text</type>
</CustomField>