Custom--app/main/default/objects/HOA_Tracking__c/fields/By_Laws_on_File__c.field-meta.xml
<CustomField>
    <fullName>By_Laws_on_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>By-Laws on File</label>
    <type>Checkbox</type>
</CustomField>