Custom--app/main/default/objects/HOA_Tracking__c/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community</label>
    <referenceTo>Community__c</referenceTo>
    <relationshipName>HOAs</relationshipName>
    <type>Lookup</type>
</CustomField>