Custom--app/main/default/objects/HOA_Tracking__c/fields/Confirmed_Balance_Paid__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Balance_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed Balance Paid</label>
    <type>Checkbox</type>
</CustomField>