Custom--app/main/default/objects/HOA_Tracking__c/fields/Confirmed_Correspondence_Address__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Correspondence_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please verify that you have confirmed with the HOA that all correspondence should be sent to the regional office, not to corporate or the property.</inlineHelpText>
    <label>Confirmed Correspondence Address</label>
    <type>Checkbox</type>
</CustomField>