Custom--app/main/default/objects/HOA_Tracking__c/fields/Confirmed_Outstanding_Balance__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Outstanding_Balance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed Outstanding Balance</label>
    <type>Checkbox</type>
</CustomField>