Custom--app/main/default/objects/HOA_Tracking__c/fields/Dues__c.field-meta.xml
<CustomField>
    <fullName>Dues__c</fullName>
    <label>Dues</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>