Custom--app/main/default/objects/HOA_Tracking__c/fields/Gate_Remote_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Gate_Remote_Ordered__c</fullName>
    <description>This is the date that the Gate Remote Ordered</description>
    <inlineHelpText>Key in the date that the Gate Remote was ordered</inlineHelpText>
    <label>Gate Remote Ordered</label>
    <type>Date</type>
</CustomField>