Custom--app/main/default/objects/HOA_Tracking__c/fields/Gated__c.field-meta.xml
<CustomField>
    <fullName>Gated__c</fullName>
    <formula>BLANKVALUE( TEXT(HOA__r.Gated__c) , "Not specified on HOA record")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is displaying data that was entered on the HOA company record.</inlineHelpText>
    <label>Gated</label>
    <type>Text</type>
</CustomField>