Custom--app/main/default/objects/HOA_Tracking__c/fields/Has_Lien__c.field-meta.xml
<CustomField>
    <fullName>Has_Lien__c</fullName>
    <label>Has Lien</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>