Custom--app/main/default/objects/HOA_Tracking__c/fields/HOA__c.field-meta.xml
<CustomField>
    <fullName>HOA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HOA</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>HOAs</relationshipName>
    <type>Lookup</type>
</CustomField>