Custom--app/main/default/objects/HOA_Tracking__c/fields/HOA_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>HOA_Account_Number__c</fullName>
    <label>HOA Account Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>