Custom--app/main/default/objects/HOA_Tracking__c/fields/HOA_Billing__c.field-meta.xml
<CustomField>
    <fullName>HOA_Billing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HOA Billing</label>
    <referenceTo>AcqPipeline__c</referenceTo>
    <relationshipLabel>HOA Billing</relationshipLabel>
    <relationshipName>HOA_Billing</relationshipName>
    <type>Lookup</type>
</CustomField>