Custom--app/main/default/objects/HOA_Tracking__c/fields/HOA_ID__c.field-meta.xml
<CustomField>
    <fullName>HOA_ID__c</fullName>
    <formula>HOA__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HOA ID</label>
    <type>Text</type>
</CustomField>