Custom--app/main/default/objects/HOA_Tracking__c/fields/HOA_Type__c.field-meta.xml
<CustomField>
    <fullName>HOA_Type__c</fullName>
    <label>HOA Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary HOA</fullName>
            </value>
            <value>
                <fullName>Master HOA</fullName>
            </value>
            <value>
                <fullName>Voluntary HOA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>CDD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>