Custom--app/main/default/objects/HOA_Tracking__c/fields/Key_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Key_Ordered__c</fullName>
    <description>the Date the key was ordered</description>
    <inlineHelpText>Key in the date that the Key was ordered.</inlineHelpText>
    <label>Key Ordered</label>
    <type>Date</type>
</CustomField>