Custom--app/main/default/objects/HOA_Tracking__c/fields/Last_HOA_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_HOA_Payment_Date__c</fullName>
    <inlineHelpText>This field is an auto-calculation of the HOA summary payments connected to this record.</inlineHelpText>
    <label>Last HOA Payment Date</label>
    <summarizedField>HOA_Payments__c.Due_Date__c</summarizedField>
    <summaryFilterItems>
        <field>HOA_Payments__c.Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </summaryFilterItems>
    <summaryForeignKey>HOA_Payments__c.HOA_Tracker__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>