Custom--app/main/default/objects/HOA_Tracking__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <formula>TEXT(Property__r.Market__c)</formula>
    <label>Market</label>
    <type>Text</type>
</CustomField>