Custom--app/main/default/objects/HOA_Tracking__c/fields/Most_Recent_HOA_Payment__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_HOA_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Most Recent HOA Payments</description>
    <label>Most Recent HOA Payment</label>
    <referenceTo>HOA_Payments__c</referenceTo>
    <relationshipLabel>HOA Tracking</relationshipLabel>
    <relationshipName>HOA_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>