Custom--app/main/default/objects/HOA_Tracking__c/fields/New_Payment_Start_date__c.field-meta.xml
<CustomField>
    <fullName>New_Payment_Start_date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be checked if a new payment start date has been requested</description>
    <label>New Payment Start date</label>
    <type>Checkbox</type>
</CustomField>