Custom--app/main/default/objects/HOA_Tracking__c/fields/Next_Payment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Payment_Due_Date__c</fullName>
    <inlineHelpText>This field will be auto-populated based on the month(s) selected above and the day of the month selected.  (NOTE to Beta Group:  This is the one remaining to-do so this will have to be manually populated during this trial period.)</inlineHelpText>
    <label>Next Payment Due Date</label>
    <type>Date</type>
</CustomField>