Custom--app/main/default/objects/HOA_Tracking__c/fields/Outstanding_Balance_Details__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Balance_Details__c</fullName>
    <label>Outstanding Balance Details</label>
    <type>TextArea</type>
</CustomField>