Custom--app/main/default/objects/HOA_Tracking__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Coupon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>