Custom--app/main/default/objects/HOA_Tracking__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>HOAs</relationshipName>
    <type>Lookup</type>
</CustomField>