Custom--app/main/default/objects/HOA_Tracking__c/fields/Property_Gate_Code__c.field-meta.xml
<CustomField>
    <fullName>Property_Gate_Code__c</fullName>
    <label>Property-Specific Gate Code</label>
    <length>155</length>
    <type>Text</type>
</CustomField>