Custom--app/main/default/objects/HOA_Tracking__c/fields/Property_Mgmt_Co__c.field-meta.xml
<CustomField>
    <fullName>Property_Mgmt_Co__c</fullName>
    <formula>HOA__r.Property_Mgmt_Company__r.Name</formula>
    <inlineHelpText>This field will display a property management company if one is associated with the HOA Company record.</inlineHelpText>
    <label>Property Mgmt Co.</label>
    <type>Text</type>
</CustomField>