Custom--app/main/default/objects/HOA_Tracking__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>TEXT(Property__r.Region__c)</formula>
    <label>Market2</label>
    <type>Text</type>
</CustomField>