Custom--app/main/default/objects/HOA_Tracking__c/fields/Requested_Vendor_Set_up_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Requested_Vendor_Set_up_if_applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requested Vendor Set-up (if applicable)</label>
    <type>Checkbox</type>
</CustomField>