Custom--app/main/default/objects/HOA_Tracking__c/fields/Residence_ID__c.field-meta.xml
<CustomField>
    <fullName>Residence_ID__c</fullName>
    <formula>Property__r.Residence__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Residence ID</label>
    <type>Text</type>
</CustomField>