Custom--app/main/default/objects/HOA_Tracking__c/fields/Securitization_Pool__c.field-meta.xml
<CustomField>
    <fullName>Securitization_Pool__c</fullName>
    <description>This is a formula that pulls the value from the Portfolio record.</description>
    <formula>TEXT(Property__r.Securitization_Pool__c)</formula>
    <inlineHelpText>This is a formula that pulls the value from the Portfolio record.</inlineHelpText>
    <label>Securitization Pool</label>
    <type>Text</type>
</CustomField>