Custom--app/main/default/objects/HOA_Tracking__c/fields/Securitized_Asset__c.field-meta.xml
<CustomField>
    <fullName>Securitized_Asset__c</fullName>
    <formula>Property__r.Securitization_Candidate__c</formula>
    <label>Securitized Asset?</label>
    <type>Checkbox</type>
</CustomField>