Custom--app/main/default/objects/HOA_Tracking__c/fields/Security_Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Security_Deposit_Amount__c</fullName>
    <formula>HOA__r.Security_Deposit_Amount__c</formula>
    <label>Security Deposit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>