Custom--app/main/default/objects/HOA_Tracking__c/fields/Security_Deposit_Type__c.field-meta.xml
<CustomField>
    <fullName>Security_Deposit_Type__c</fullName>
    <formula>BLANKVALUE(TEXT(HOA__r.Security_Deposit_Type__c) , "Not specified on HOA record")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Security Deposit Type</label>
    <type>Text</type>
</CustomField>