Custom--app/main/default/objects/HOA_Tracking__c/fields/Special_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Special_Assessment__c</fullName>
    <label>Recurring Special Assessment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>