Custom--app/main/default/objects/HOA_Tracking__c/fields/Special_Notes__c.field-meta.xml
<CustomField>
    <fullName>Special_Notes__c</fullName>
    <label>Special Notes</label>
    <type>TextArea</type>
</CustomField>