Custom--app/main/default/objects/HOA_Tracking__c/fields/Temp_HOA_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Temp_HOA_Account_Number__c</fullName>
    <formula>IF(
	HOA_Account_Number__c == Property__r.Property_Street__c, 
	HOA_Account_Number__c, 
	IF(
		ISBLANK(HOA_Account_Number__c),
		Property__r.Property_Street__c,
		HOA_Account_Number__c + "_" +  Property__r.Property_Street__c
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Temp HOA Account Number</label>
    <type>Text</type>
</CustomField>