Custom--app/main/default/objects/HOA_Tracking__c/fields/Tenant_Sreening_Required__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Sreening_Required__c</fullName>
    <formula>BLANKVALUE( TEXT(HOA__r.Tenant_Aplication_Required__c), "Not specified on HOA record")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tenant Screening Required</label>
    <type>Text</type>
</CustomField>