Custom--app/main/default/objects/HOA_Tracking__c/fields/Total_HOA_Payments_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Total_HOA_Payments_to_Date__c</fullName>
    <label>Total HOA Payments to Date</label>
    <summarizedField>HOA_Payments__c.Monthly_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>HOA_Payments__c.Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>HOA_Payments__c.HOA_Tracker__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>