Custom--app/main/default/objects/HOA_Tracking__c/fields/Welcome_Packet_Received__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Packet_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Welcome Packet Received</label>
    <type>Checkbox</type>
</CustomField>