Custom--app/main/default/objects/HOA_Tracking__c/fields/Yardi_Vendor_Code__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Vendor_Code__c</fullName>
    <formula>HOA__r.Yardi_vendor_code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is displaying the information from the HOA Company record.</inlineHelpText>
    <label>Yardi Vendor Code</label>
    <type>Text</type>
</CustomField>