Custom--app/main/default/objects/HOA_Tracking__c/validationRules/HOA_Cannot_Be_Edited.validationRule-meta.xml
<ValidationRule>
    <fullName>HOA_Cannot_Be_Edited</fullName>
    <active>false</active>
    <description>HOA cannot be edited after save.</description>
    <errorConditionFormula>AND( 
NOT( ISNEW() ), 
ISCHANGED( HOA__c ), 
NOT($Profile.Name = "System Administrator"))</errorConditionFormula>
    <errorDisplayField>HOA__c</errorDisplayField>
    <errorMessage>HOA cannot be edited after save.</errorMessage>
</ValidationRule>