Custom--app/main/default/objects/HOA_Tracking__c/validationRules/Payment_Start_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Start_Date_Validation</fullName>
    <active>false</active>
    <description>If the payment frequency changes, then a new payment start date will need to be entered</description>
    <errorConditionFormula>ISCHANGED( Payment_Frequency__c ) &amp;&amp; ! ISCHANGED( Payment_Start_Date__c )</errorConditionFormula>
    <errorMessage>New Payment Start Date needs to be entered.</errorMessage>
</ValidationRule>