Custom--app/main/default/objects/HOA_Tracking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Property__c</columns>
    <columns>Property_Mgmt_Co__c</columns>
    <columns>HOA__c</columns>
    <columns>HOA_Account_Number__c</columns>
    <columns>Dues__c</columns>
    <columns>Special_Assessment__c</columns>
    <columns>Payment_Amount__c</columns>
    <columns>Yardi_Vendor_Code__c</columns>
    <columns>W9__c</columns>
    <columns>Payment_Frequency__c</columns>
    <columns>Last_HOA_Payment_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>