Custom--app/main/default/objects/HOA_Tracking__c/listViews/HOA_Trackers_for_Seattle.listView-meta.xml
<ListView>
    <fullName>HOA_Trackers_for_Seattle</fullName>
    <columns>Property__c</columns>
    <columns>HOA__c</columns>
    <columns>HOA_Account_Number__c</columns>
    <columns>Payment_Frequency__c</columns>
    <columns>Payment_Amount__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>HOA_Type__c</columns>
    <columns>Yardi_Vendor_Code__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>Seattle</value>
    </filters>
    <label>HOA Trackers for Seattle</label>
</ListView>